fabric/testdata/out/ing_setanta-category-gatekeeper-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"application":"setanta-category-gatekeeper","controller-uid":"a33746cf-7888-46c2-8dc9-60c003d3127f","deployment-id":"d-2azdig4sinn5uusgktqsvf288n","pipeline-id":"l-2nk7f9gw2i2t6hkqdv6j3v97ve"},"name":"setanta-category-gatekeeper-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"category-gatekeeper.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-category-gatekeeper","servicePort":"api-port"},"p [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-05-25T19:59:10Z"
  generation: 1
  labels:
    application: setanta-category-gatekeeper
    controller-uid: a33746cf-7888-46c2-8dc9-60c003d3127f
    deployment-id: d-2azdig4sinn5uusgktqsvf288n
    pipeline-id: l-2nk7f9gw2i2t6hkqdv6j3v97ve
  name: setanta-category-gatekeeper-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-category-gatekeeper
    uid: a33746cf-7888-46c2-8dc9-60c003d3127f
  resourceVersion: "1380106423"
  uid: 17fcbd02-7031-49a2-ae09-848d626f015e
spec:
  rules:
  - host: category-gatekeeper.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-category-gatekeeper
            port:
              name: api-port
        pathType: ImplementationSpecific
  - host: spp-category-gatekeeper-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-category-gatekeeper
            port:
              name: api-port
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
